--- a/Notebook/stack_bar_percent.html
+++ b/Notebook/stack_bar_percent.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="0c1675532af4440d8d4f34d7064b831c" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="6658759f96e44bf5a7d7594df55da90d" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_0c1675532af4440d8d4f34d7064b831c = echarts.init(
-            document.getElementById('0c1675532af4440d8d4f34d7064b831c'), 'light', {renderer: 'canvas'});
-        var option_0c1675532af4440d8d4f34d7064b831c = {
+        var chart_6658759f96e44bf5a7d7594df55da90d = echarts.init(
+            document.getElementById('6658759f96e44bf5a7d7594df55da90d'), 'light', {renderer: 'canvas'});
+        var option_6658759f96e44bf5a7d7594df55da90d = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -23,7 +23,7 @@
     "series": [
         {
             "type": "bar",
-            "name": "product1",
+            "name": "GeWom",
             "legendHoverLink": true,
             "data": [
                 {
@@ -178,7 +178,7 @@
         },
         {
             "type": "bar",
-            "name": "product2",
+            "name": "GeMe",
             "legendHoverLink": true,
             "data": [
                 {
@@ -333,7 +333,7 @@
         },
         {
             "type": "bar",
-            "name": "product3",
+            "name": "GCh",
             "legendHoverLink": true,
             "data": [
                 {
@@ -488,7 +488,7 @@
         },
         {
             "type": "bar",
-            "name": "product4",
+            "name": "GDis",
             "legendHoverLink": true,
             "data": [
                 {
@@ -643,7 +643,7 @@
         },
         {
             "type": "bar",
-            "name": "product5",
+            "name": "GAge",
             "legendHoverLink": true,
             "data": [
                 {
@@ -800,18 +800,18 @@
     "legend": [
         {
             "data": [
-                "product1",
-                "product2",
-                "product3",
-                "product4",
-                "product5"
+                "GeWom",
+                "GeMe",
+                "GCh",
+                "GDis",
+                "GAge"
             ],
             "selected": {
-                "product1": true,
-                "product2": true,
-                "product3": true,
-                "product4": true,
-                "product5": true
+                "GeWom": true,
+                "GeMe": true,
+                "GCh": true,
+                "GDis": true,
+                "GAge": true
             },
             "show": true,
             "padding": 5,
@@ -918,7 +918,6 @@
     ],
     "title": [
         {
-            "text": "Bar-DataZoom",
             "padding": 5,
             "itemGap": 10
         }
@@ -934,7 +933,7 @@
         "filterMode": "filter"
     }
 };
-        chart_0c1675532af4440d8d4f34d7064b831c.setOption(option_0c1675532af4440d8d4f34d7064b831c);
+        chart_6658759f96e44bf5a7d7594df55da90d.setOption(option_6658759f96e44bf5a7d7594df55da90d);
     </script>
 </body>
 </html>
